Starting CSS method

--- a/test/var.scss
+++ b/test/var.scss
@@ -1,5 +1,6 @@
 $red: red;
 $hex: 00ff00;
 background: $hex;
-$view-sprite: sprite-map("styleguide/*.png", $spacing: 2px);
-$images: sprite-map("*.png");
+$images: sprite-map("test/*.png");
+
+background: sprite($images, "140");
