--- a/test/_var.scss
+++ b/test/_var.scss
@@ -1,6 +1,8 @@
 $red-var: red;
-$hex: 00FF00;
+$hex: #00FF00;
 background: $hex;
+$hex: #00DD00;
 $images: sprite-map("test/*.png");
-
+background: sprite($images, "139");
 background: sprite($images, "140");
+font-size: 10pt;
