Add long comments to test stamina

--- a/test/_comment.scss
+++ b/test/_comment.scss
@@ -1,9 +1,74 @@
-/*
-$Booger: nope;/
-*****
-"Boogers"
-*/
+/*!
+............................ZDO?+?+++?~=??+?+IDD=.~NDDDDZ.......................
+...............  . .....DI?????????+=.....++++??++++DD77777D....................
+................ZNDZ7$ODN7?+++???++??????+++++?++++++++?OD777,..................
+............N$$ZDOD$$$$$$$I?+??+?+??+?+?++++?+++?.....,+++,,78N.................
+.........?Z7$8......OD$$$$7$$$$+??+?++++++??++++?,....?+??+,..??N, .............
+........N$$Z....$DND.,N$7$$$$$$..~++???++?+?+??..~?++++++++++++++++D............
+.......D$$7...INNNNDN8~O$$$$$7$$$++????++?+?++:..+++++++++++++++++...7O.........
+......N7$$D...DDNNNNDD.D$8?77$$$7+?I7$7$$7777$7777777777777777777O7+++++D.......
+.....,$$$$...:DNNNNNNN??7$$$$$$$$$7$77$$$$$7$777777777777777777777777777DDD.....
+.....N$$$$ ...NNNN?.,:?Z$$$$$$$$$7$$$$$$$7$77$7$77$7?++:.................,~?+D..
+.....N$$$$8...NNN?......7$$$$$$$$$$$$$$7$$$$$+=.................................
+.....D$$$$$N.....,..,....+$$$$$$$$$Z$$$+:.......INDDNNNNDDDNNDDDDDDDDNDDD7....N.
+.....D$$$$$$$DDD8,,,.,.....+7$Z$?+:.......,DNDDDNNNDDDDDDDNNDDDDDDDDNNDDDNN..D..
+.....:$$$$$$$$$$$....,.N.,,..,.....,:DNDDNDDDDNDDDDDDDDDNNNDDDDDDDDNNDDDDDO~O.,.
+.....NN$$$$$$$$$7?......,DNNNNDNNNDNNNNNDNDDDDNDDDDNDDDDNDDNNDDNNNDDDDNN.D......
+.....NN$$$$$$$$$$$.......7O?????????ODDDNNDDDNNDDNDNDDDNDDDDNNNDDNDN..N.........
+....?$$$$$$$$$$Z$$?,......?,O????????I???8Z??I7Z8DNNDDNDDDNNDD$.=D8.............
+....N$$8$$$$$$$$$$$.+?,....,7,8????????????+78++?++++8I7DMNO.... .. .... .. ...
+....N$$$$$$$$$$$$$O..:.......,7.8???????+???+++I?++++++8,I............ .........
+....ODNNNZ$$$$Z7Z$D...~,........7..8????++++++++++++++==+Z.$. .. ...............
+..NNN$$$$$$$$$$$$$N...,?..........7$,.8++++=++?+=+++==+=+==8.7..................
+...OZNN$7$$$$$$$$7D.....?............+7:..8I+++++===+====+==8.7.................
+..,DD$$$$N$$$$7$$$N,.....,?..............I7=..,8Z=+=+=====+=8...................
+...N$ZND$$$$$$$$$$N........,:................,7$7....?88888...$.................
+...DN8ZODDDZ$$$$$$N..........:=......................~I7777,7......OO...........
+.DM.   .,+=....:NDN.............+.........................$D.... ..?............
+ N....:...... ......ZD.............?:...................$.N..........D..........
+....8?................ .ZN.............??............:...N........8..Z..........
+....N:.................... .7N~...............,,........,:...... ND..,..........
+....N................. ........ .NN.....................N D .....?...,.. .......
+....8............. ~..................MN..............,N.D....ZN8N...?..........
+..........7........:.. ............ .......7MMMNNNN8...D,~~:$$$7?8...D..........
+............$......Z..................................D$7$$$$7$7?I..............
+.....7??$ZZ..$ .  7.. .....~................. .......$$7$$$7$$7$7Z..8...........
+.....DI?$$$Z$.+..7..........D.N,8D.N......... .......N$$,,,,,$7$8..8............
+.....NI?$$$$$$..7$7~........8DDN.D7D.D.N.NO.?..N.==7$$ZZ7$$$$7Z:.8..............
+.....N??ZZ$,,ZZ7.............N.D.N.ND.~N.D.8.?,8I7,IN$$$$$7DD.,N................
+.....7??$$,,IZ~$...................~O NN,N.,,I+I++:,O...........................
+......DI$Z?$$D.. ...........................I7.....N............................
+ .....D$$Z$$Z$...........................:..:...I..N............................
+......8$ZZ$,Z,...........................I .I...................................
+.......ZZ$$$Z,....................................?.............................
+.......O$Z$ZN+ ...................................N.............................
+.......OZ$$$DN....=...............................N.............................
+.......Z$ZZ$.D ......$............................D.............................
+......Z?Z$$8,D...........7$........................M............................
+......D,Z$$:D.N......................... ......ND. .............................
+....NZZ$$$N8...N.......... . .............8DOZZZN...............................
+..,$$$Z$$ND......ZNDI... .     ..:8NDD.$$$$$ZZ$ZN... ...........................
+...N$ZZO,D ........O$$$$$$$$$$:$....N$I+$$$ZZZZ$$...............................
+.....ON: ..........N$$$=:$$$$$$D.....Z::$Z$$$:7Z................................
+...................D$$$::$$$Z$$D.....8::$$ZZZ::N................................
+...................N$$$$$$$$$$?......N$$$ZZZZ~ZN................................
+...................D$$$$$$$$$~N......NZZ$ZZZZZ8.................................
+...................O$$$$$$$Z$Z.......D$$$Z$$$ZN.................................
+....................$$$$$$$$$8.......N$$Z$$$$8.............WhaleShark...........
+....................$$$$$$$$N........NZZZ$ZZ:N...............Media..............
+....................,,7Z$$$$7........8$$$$$,N...................................
+....................D,$$$$$N.........O$$$$$Z8...................................
+....................N$$$$,,N.........ZZZ$$$N....................................
+....................N$$7$,...........D,Z$$8.....................................
+.....................Z$$$$8.........D$I$$$Z.....................................
+.....................$Z$$ZO.........$$$$$$Z$....................................
+.................. ..8,Z$ZZ$?......D$$$$Z$$$$Z$NN...............................
+...................OOZ$$$$$$$NZOO$ZZ$ZZ$$$,,:Z$$$,,,~N8O=..... .................
+.............OZOOZOZOO$$$$,,,$ZNZZOONZZZZZ$?Z$$$$$$Z$ZZZDOO8OO+.................
+..........OOZZZOOOZOZN$$ZZ,,,,$$$8OZOOOODNZZ$$ZZZZ$$ZZZ$ZNOOOO88Z...............
+..........OOZZZ8ZOOOOZD$$$$$$$$$$7ZZZOOOOOOOOO8NNNNNNNNNO8OOOO8O88..............
+...........ZOOOOOOOOZZZZN$$$$$$Z,,ZOZOZZZOOOOOOOOOO88OOO88888O8O,...............
+...............OOOOOO8OOZOOND$$ZNOZZO8OOOOO8OOZOOOO8O8O8OOO8O ..................
 
-div {
-    background: red;
-}
+
+**/
