--- a/test/_var.scss
+++ b/test/_var.scss
@@ -3,7 +3,7 @@ $hex: #00FF00;
 div {
     background: $hex;
     $hex: #00DD00;
-    $images: sprite-map("test/*.png");
+    $images: sprite-map("*.png");
     background: sprite($images, "139");
     background: sprite($images, "140");
     font-size: 10pt;
