--- a/test/sprite.scss
+++ b/test/sprite.scss
@@ -1,4 +1,5 @@
 $sprites: sprite-map("*.png");
+$width: sprite-width($sprites, 139);
 div {
     height: sprite-height($sprites, 139);
     width: sprite-width($sprites, 139);
