--- a/test/var.css
+++ b/test/var.css
@@ -1,5 +1,5 @@
 div {
   background: #00FF00;
-  background: url("test") 0px 0px;
-  background: url("test") 0px -139px;
+  background: url("./image") 0px 0px;
+  background: url("./image") 0px -139px;
   font-size: 10pt; }
