Added mixin and interpolation testing

--- a/test/mixin.scss
+++ b/test/mixin.scss
@@ -9,3 +9,12 @@
   }
   @return $list;
 }
+
+@mixin large-text {
+  font: {
+    family: Arial;
+    size: 20px;
+    weight: bold;
+  }
+  color: #ff0000;
+}
