--- a/test/expected/file.css
+++ b/test/expected/file.css
@@ -2,7 +2,7 @@ div {
   color: black;
   width: 96px;
   height: 139px;
-  background: url('test/build/image-d65510.png') -0px -0px;
+  background: url('img/image-554064.png') -0px -0px;
   background-position: -0px -0px; }
 
 p {
