--- a/test/expected/import.css
+++ b/test/expected/import.css
@@ -1,5 +1,5 @@
 div {
   background: #00FF00;
-  background: url('test/build/image-585dca.png') -0px -0px;
-  background: url('test/build/image-585dca.png') -0px -139px;
+  background: url('img/image-554064.png') -0px -0px;
+  background: url('img/image-554064.png') -0px -139px;
   font-size: 10pt; }
