--- a/test/sass/sprite.scss
+++ b/test/sass/sprite.scss
@@ -1,8 +1,7 @@
-@import "../../sass/sprite";
-@import "images";
 $sprites: sprite-map("../img/*.png");
 $width: sprite-width($sprites, 139);
 div {
-    height: sprite-height($sprites, 139);
-    width: sprite-width($sprites, 139);
+    height: image-height(sprite-file($sprites, "139"));
+    width: image-width(sprite-file($sprites, "139"));
+	background: sprite($sprites, "139");
 }
