top level file does not use importer

--- a/test/whitespace/import.sass
+++ b/test/whitespace/import.sass
@@ -1,7 +1,8 @@
 // base.sass
 
-@import reset
+@import one
+//@import two
 
 body
-  font: 100% Helvetica, sans-serif
-  background-color: #efefef
+  font: 100% $font-stack
+  background-color: $primary-color
